# factorybot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
factorybot/: __init__.py  __main__.py  app.py
factorybot/agents/: tool_test.py
factorybot/api/: __init__.py  index.py  tool_test.py
factorybot/core/: __init__.py  agentscope.py  config.py
factorybot/tools/: get_current_time.py
src/: demo.py  factory.py
src/agents/: tool_test.py
src/agentscope_app/: __init__.py  factory.py
src/api/: __init__.py  health.py  tool_test.py
src/demo/: tool_test.py
src/schemas/: tool_test.py
src/tools/: __init__.py
webui/: pnpm-workspace.yaml
