[project]
name = "factorybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=2.0.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
factorybot = "factorybot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factorybot"]
